# periodic_file_storage

./: compose.yml
factory/: Dockerfile  pyproject.toml
factory/src/: app.py  main.py
factory/src/config/: celery.py  rabbitmq.py  sftp.py
file_factory/: Dockerfile  pyproject.toml
file_factory/src/: app.py  celery_config.py  client.py  main.py
file_keeper/: Dockerfile  pyproject.toml
file_keeper/src/: app.py  celery_config.py  config.py
keeper/: Dockerfile  pyproject.toml
keeper/src/: __init__.py  app.py
keeper/src/config/: celery.py  factory.py  keeper.py  minio.py  rabbitmq.py  redis.py
keeper/src/domain/file/: dto.py  exception.py  service.py
keeper/src/domain/file/dal/: minio.py  rabbitmq.py  redis.py  sftp.py
keeper/src/domain/file/server/celery/: task.py
